# qslice-viewer

./: CMakeLists.txt
data/: sample.json
src/: data.cpp  data.h  main.cpp  view.cpp  view.h
